updated the antd select to avoid zoom on safari and ios browsers

--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -91,13 +91,26 @@
 }
 
 .custom-select .ant-select-selector {
-  @apply border-none! dark:bg-transparent!;
+  @apply border-none dark:bg-transparent;
+  font-size: 16px !important;
 }
 
 .custom-select .ant-select-selection-placeholder {
-  @apply dark:text-gray-600!;
+  @apply dark:text-gray-600;
+  font-size: 16px !important;
 }
 
+.custom-select .ant-select-selection-item {
+  font-size: 16px !important;
+}
+
+.custom-select .ant-select-selection-search-input {
+  font-size: 16px !important;
+}
+
+.ant-select-dropdown {
+  font-size: 16px !important;
+}
 .rad-div {
   @apply flex justify-start items-center gap-2 my-2;
 }
@@ -146,7 +159,8 @@
 }
 
 .stickb {
-  @apply fixed bottom-0 left-0 shadow-gray-600 shadow-md w-full;
+  @apply fixed bottom-0 left-0 shadow-gray-600 shadow-md w-full
+  mt-5;
 }
 
 .preview-buttons {
